# seqai

./: .gitignore  Makefile  README.md  claude-mcp.json  claude.sh  main.py  pyproject.toml  sample_logseq_db  semantic_db.py  server.py
adapter/: chroma_db_adapter.py  logseq_api_adapter.py  logseq_db_adapter.py  logseq_semantic_search_adapter.py
agents/: logseq_agent.py
evals/: logseq_agent_evals.py
model/: logseq.py
sample_logseq/journals/: 2026_04_13.md  2026_04_15.md  2026_04_21.md
sample_logseq/pages/: Tensor.md  Vector.md
service/: configure_otel_service.py  indexer_service.py  query_service.py
tests/: setup.py
tests/adapter/: chroma_db_adapter_test.py  logseq_db_adapter_test.py
tests/agents/: test_logseq_agent.py
tests/service/: inexer_service_test.py
