[project]
name = "seqai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb",
    "transit-python2",
    "pydantic-ai[evals,mcp,cli,google]",
    "pydantic-evals>=1.80.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython"
]

[tool.pytest.ini_options]
pythonpath = ["."]
